# note.py

./: .coveragerc  .gitignore  AUTHORS  README.md  SECURITY.md  changelog.md  check_coverage.py  note.py  pyproject.toml  requirements.txt  test_modelevent.py  test_note.py  test_persistence.py  test_waitstatus_to_exitcode.py
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  issue.md
.github/workflows/: build-pypi.yml  build-windows.yml  build.yml  coverage.yml  pages.yml  release.yml
doc/: README.md  class_diagram.rst  classes.dot  conf.py  create_doc.sh  index.rst  requirements.txt  source_code.rst
font/: font-shrink.py  glyph-picker.py  glyph_picker.py  notepy_icofont.yml
