[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "note.py-gui"
description = "Yet another note taking app."
version = "1.3.2"
requires-python = ">= 3.8"
dependencies = [
  "cmarkgfm>=2022.10.27",
  "Pillow>=10.1.0",
  "tk>=0.1.0",
  "tkinter-tooltip>=2.1.0",
  "tkinterweb>=3.23.1",
  "ttkthemes>=3.2.2",
  "PyYAML>=6.0.1",
  "urllib3>=2.0.7"
]
authors = [
  {name = "Falk Werner"},
  {name = "Henrik Lampe"}
]
keywords = ["note", "note-taking", "markdown"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent",
  "Topic :: Desktop Environment",
  "Topic :: Text Editors",
  "Topic :: Text Processing :: Markup :: Markdown"
]

[project.urls]
Homepage = "https://github.com/falk-werner/note.py"
Documentation = "https://falk-werner.github.io/note.py/index.html"
Repository = "https://github.com/falk-werner/note.py"
Issues = "https://github.com/falk-werner/note.py/issues"
Changelog = "https://github.com/falk-werner/note.py/blob/main/changelog.md"

[tool.setuptools]
include-package-data = true
py-modules = ["note"]   

[project.gui-scripts]
note = "note:main"